[project]
name = "hns-login"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "dnspython>=2.6.1",
    "eth-account>=0.13.7",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "requests-doh>=1.0.0",
    "web3>=7.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
